Please make it work now
Please make it work now

--- a/DevOpsSF/src/classes/TriggerBuildAgain.cls
+++ b/DevOpsSF/src/classes/TriggerBuildAgain.cls
@@ -4,5 +4,10 @@ public with sharing class TriggerBuildAgain {
 	public String strName() {
 		return null;
 	}
+	
+	//I hope this works PLEASE
+	public String strName1() {
+		return null;
+	}
     
 }
