--- a/DevOpsSF/src/classes/TriggerBuildAgain.cls
+++ b/DevOpsSF/src/classes/TriggerBuildAgain.cls
@@ -9,4 +9,9 @@ public with sharing class TriggerBuildAgain {
 	public String strName1() {
 		return null;
 	}
+    
+    //I hope this works PLEASE
+	public String strName2() {
+		return null;
+	}
 }	
